--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             title="Age Group"
           ></i>
           <select class="form-select" id="age-group" aria-label="Default select example">
+            <option>Select age group</option>
             <option value="&lt;40">&lt;40</option>
             <option value="&gt;=40 & &lt;60">&gt;=40 & &lt;60</option>
             <option value="&gt;=60">&gt;=60</option>
@@ -105,6 +106,7 @@
           data-bs-toggle="modal"
           data-bs-target="#output-modal"
           onclick="calculateFinalAmount()"
+          disabled
         >
           Submit
         </button>
